--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,9 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+
+  --btn-idle: rgb(242, 242, 242);
+  --btn-hover: rgb(216, 216, 216);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -12,6 +15,7 @@
 
 html,
 body {
+  font-size: 10px;
   max-width: 100vw;
   overflow-x: hidden;
 }
@@ -22,6 +26,27 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  display: flex;
+  flex-direction: column;
+  height: 100dvh;
+  width: 100dvw;
+}
+body > section{
+  height: 100dvh;
+  width: 100dvw;
+  padding-top: 28px;
+  padding-left: 260px;
+  overflow: hidden;
+}
+
+section > h1{
+  font-family: var(--font-zenkaku-gothic-medium);
+  font-size: 4.6rem;
+}
+section > h2{
+  font-size: 1.8rem;
+  font-family: var(--font-zenkaku-gothic-regular);
 }
 
 * {
