--- a/app/Product/page.module.scss
+++ b/app/Product/page.module.scss
@@ -1,4 +1,6 @@
-
+.warning{
+    font-size: 1.8rem;
+}
 
 .content{
     display: grid;
@@ -15,9 +17,8 @@
         background-color: var(--btn-idle);
         aspect-ratio: 1 / 1;
 
-        > p{
-            font-size: 1.2rem;
-        }
+
+        position: relative;
     }
 
     &__models{
