--- a/app/components/ModelViewer.module.scss
+++ b/app/components/ModelViewer.module.scss
@@ -1,5 +1,5 @@
 .viewer__redirect{
-    background: center/80%  url("/images/ic__booth.png");
+    background: center/80%  url("/logo/booth.png");
     height: 4.6rem;
     color: transparent;
 
