added Archive page

--- a/app/Product/page.module.scss
+++ b/app/Product/page.module.scss
@@ -3,6 +3,7 @@
 }
 
 .content{
+    padding: 6rem 4rem;
     display: grid;
     grid-template-columns: 60dvh 1fr;
     font-family: var(--font-zenkaku-gothic-medium);
