--- a/app/components/Header.module.scss
+++ b/app/components/Header.module.scss
@@ -18,7 +18,7 @@
 
 .listChild{
     font-size: 3rem;
-    color: rgb(152, 152, 152);
+    color: var(--color-gray-tint);
     margin: 1rem 0;
     transition: color 0.2s, margin 0.3s;
 
@@ -32,7 +32,6 @@
         padding-left: 1rem;
     }
 
-
     &:hover::before{
         width: 100%;
     }
@@ -40,7 +39,7 @@
         content: "";
         width: 0;
         height: 1px;
-        background-color: rgb(99, 99, 99, 0.7);
+        background-color: var(--color-gray-tone);
         position: absolute;
         bottom: 0;
         transition: all 0.4s;
