--- a/app/Link/page.module.scss
+++ b/app/Link/page.module.scss
@@ -16,6 +16,7 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    align-content: flex-start;
     gap: 4.8rem 3.6rem;
     width: 80%;
 }
