--- a/app/components/PictureFrame.module.scss
+++ b/app/components/PictureFrame.module.scss
@@ -43,15 +43,26 @@
         img{
             transform: scale(1.1);
         }
+
+        .legend{
+            visibility: visible;
+            opacity: 1;
+        }
     }
     > img{
         object-fit: cover;
         transition: all 0.6s;
-        &::before{
-            z-index: 1;
-            content: attr(data-date)"";
-            background-color: #a50034;
-            font-size: 2rem;
-        }
+    }
+    .legend{
+        position: absolute;
+        right: 12px;
+        bottom: 8px;
+        font-size: 2.2rem;
+        font-family: var(--font-roboto-mono);
+        color: rgb(255, 195, 163);
+        visibility: hidden;
+        opacity: 0;
+        transition: all 0.4s;
+        z-index: 1;
     }
 }
