--- a/app/Link/page.module.scss
+++ b/app/Link/page.module.scss
@@ -7,8 +7,17 @@
         object-fit: cover;
         background: center/100% url("/images/steakholder.png") no-repeat;
         position: absolute;
-        right: -10rem;
         bottom: 0;
+        animation: entry 0.6s forwards ease-out;
+    }
+}
+
+@keyframes entry {
+    0%{
+        right: -60dvh;
+    }
+    100%{
+        right: -10rem;
     }
 }
 .content{
