--- a/app/About/page.module.scss
+++ b/app/About/page.module.scss
@@ -73,3 +73,13 @@
         }
     }
 }
+
+.caption{
+    &__name{
+        font-size: 2.6rem;
+    }
+    &__status{
+        font-size: 1.4rem;
+        padding: 0.4rem 0;
+    }
+}
