--- a/app/globals.css
+++ b/app/globals.css
@@ -12,7 +12,8 @@
   --color-gray-tint: rgb(152, 152, 152);
   --color-gray-tone: rgb(99, 99, 99, 0.7);
 
-  --color-blue-vivid: rgb(173, 203, 255);
+  --color-blue-vivid: rgb(196, 233, 255);
+  --color-blue: rgb(110, 147, 182);
   --color-blue-tint: rgb(198, 196, 206);
   --color-blue-tone: rgb(59, 58, 65);
 
