--- a/app/About/page.module.scss
+++ b/app/About/page.module.scss
@@ -130,3 +130,97 @@
         font-family: var(--font-zenkaku-gothic-bold);
     }
 }
+
+@media screen and (max-width: 460px), (min-height: 800px){
+    .content{
+
+        --border-radius: 10px;
+
+        grid-template-rows: 23.2dvh 3fr;
+        grid-template-columns: 1fr;
+
+        .info{
+            --margin-vertical-slide: 4rem;
+            grid-template-rows: 1fr;
+            grid-template-columns: max-content 1fr;
+            padding-left: 20px;
+            gap: 20px;
+            border-radius: var(--border-radius) 0 0 var(--border-radius) ;
+
+            .appendix{
+                padding: 12px 24px;
+                &__list{
+                    font-size: 1.6rem;
+                    gap: 8px;
+
+                    >li{
+                        height: 3rem;
+                    }
+                    &::before{
+                        padding-bottom: 12px;
+                        font-size: 2.4rem;
+                    }
+                }
+            }
+        }
+
+        .introduction{
+            --margin-vertical-slide: -2rem;
+            grid-template-rows: 42rem 1fr;
+        }
+    }
+}
+
+
+
+@media screen and (max-width: 460px) and (max-height: 800px){
+    .content{
+        --gap-content: 1.6rem;
+        --border-radius: 6px;
+
+        grid-template-rows: max-content 3fr;
+        padding-right: 0;
+
+        .info{
+            --margin-vertical-slide: 2rem;
+            padding: 0 18px 0 8px;
+
+            .appendix{
+                padding: 4px 6px;
+                gap: 4px;
+
+                &__list{
+                    font-size: 1.2rem;
+                    gap: 2px;
+                    >li{
+                        height: 1.8rem;
+                    }
+                    &::before{
+                        padding-bottom: 4px;
+                        font-size: 2rem;
+                    }
+                }
+            }
+        }
+        
+        .introduction{
+            --margin-vertical-slide: -0.6rem;
+            grid-template-rows: 32dvh 20dvh;
+            transform: translateY(var(--margin-vertical-slide));
+
+        }
+
+    }
+
+
+    
+    .caption{
+        &__name{
+            font-size: 1.6rem;
+        }
+        &__status{
+            font-size: 0.6rem;
+            padding: 0.4rem 0;
+        }
+    }
+}
