--- a/app/components/Card.module.scss
+++ b/app/components/Card.module.scss
@@ -38,3 +38,9 @@
         flex-direction: column;
     }
 }
+
+@media screen and (max-width: 460px) and (max-height: 800px){
+    .avatar{
+        min-width: 4rem !important;
+    }
+}
