--- a/app/globals.css
+++ b/app/globals.css
@@ -19,8 +19,13 @@
   --color-blue-tint: rgb(212, 211, 216);
   --color-blue-tone: rgb(59, 58, 65);
 
-  --padding-vertical-content: 6rem;
-  --padding-horizontal-content: 4rem;
+  --padding-vertical-content: 3dvh;
+  --padding-horizontal-content: 3dvw;
+
+
+  --header-width: max(17dvw, 200px);
+  --padding-header-disable: 10px;
+  --break-tablet:960px;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -42,7 +47,7 @@ html,
 body {
   font-size: 10px;
   max-width: 100vw;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 body {
@@ -60,8 +65,7 @@ body {
 body > section{
   height: calc(100dvh - 28px);
   margin-top: 28px;
-  margin-left: 260px;
-  overflow: hidden;
+  margin-left: var(--header-width);
   display: grid;
   grid-template-rows: max-content max-content 1fr;
 }
@@ -89,5 +93,17 @@ a {
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
+  }
+}
+
+@media screen and (max-width: 680px){
+  body > section{
+    margin-left: var(--padding-header-disable);
+  }
+}
+
+@media screen and (max-width: 960px){
+  html, body{
+    font-size: 9px;
   }
 }
