added header responsive

--- a/app/components/Header.module.scss
+++ b/app/components/Header.module.scss
@@ -1,7 +1,19 @@
 .header{
     width: var(--header-width);
+    background: color-mix(in srgb, var(--background) 90%, transparent);
     height: 100vh;
     position: fixed;
+    z-index: 1;
+
+    &::before{
+        content: "";
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        width: 100%;
+        height: 100%;
+        backdrop-filter: blur(2px);
+    }
 }
 
 .list{
@@ -51,7 +63,44 @@
 }
 
 @media screen and (max-width: 680px){
+    .list{
+        padding-top: 16dvh;
+    }
     .header{
-        left: calc(-1 * var(--header-width));
+
+        --size-icon: 3rem;
+        right: calc(-1 * var(--header-width));
+        pointer-events: none;
+        transition: all 0.4s;
+        .listChild{
+            pointer-events: all;
+        }
+
+        &[data-isOpen="true"]{
+            right: 0;
+            width: calc(var(--header-width) + 4.6rem);
+
+            &::after{
+                right: calc(var(--header-width) - 4rem);
+            }
+        }
+        &::after{
+            content: "";
+            position: fixed;
+            right: 4rem;
+            top: calc(var(--padding-top-body) + 2.3rem);
+            z-index: 2;
+
+            pointer-events: all;
+            height: var(--size-icon);
+            aspect-ratio: 1 / 1;
+            mask-image: url("/images/bars-solid.svg");
+            mask-repeat: no-repeat;
+            mask-size: cover;
+            background: var(--foreground);
+
+            transition: all 0.4s;
+
+        }
     }
 }
