--- a/app/components/PictureList.module.scss
+++ b/app/components/PictureList.module.scss
@@ -13,7 +13,7 @@
     > *{
         flex-shrink: 0;
     }
-    
+    /*
     &::before, &::after{
         content: "";
         height: 100%;
@@ -32,4 +32,5 @@
         background: linear-gradient(90deg, rgba(var(--gradient-background),0) 0%, rgba(var(--gradient-background),0.5) 95%, rgba(var(--gradient-background),1) 100%);
         right: -0rem;
     }
+    */
 }
