--- a/app/page.module.css
+++ b/app/page.module.css
@@ -21,6 +21,9 @@
   letter-spacing: 4px;
   color: var(--background);
   padding: 40px;
+  z-index: -1;
+  user-select: none;
+  pointer-events: none;
 }
 /* Enable hover only on non-touch devices */
 @media (hover: hover) and (pointer: fine) {
